# https://rust-lang.github.io/api-guidelines/checklist.html

[package]
name          = "lm-sensors"
description   = "Hardware monitoring in Linux"
version       = "0.2.0"
authors       = ["Koutheir Attouchi <koutheir@gmail.com>"]
edition       = "2021"
readme        = "README.md"
license       = "MIT"
keywords      = ["ffi", "bindings", "sensor", "linux", "monitoring"]
categories    = ["api-bindings", "os", "os::linux-apis", "hardware-support"]
repository    = "https://github.com/koutheir/lm-sensors"
documentation = "https://docs.rs/lm-sensors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sensors-sys = { version = "0.2" }
thiserror   = { version = "1.0" }
libc        = { version = "0.2" }
bitflags    = { version = "2.4" }
num_enum    = { version = "0.7" }

[dev-dependencies]
assert_matches = { version = "1.5" }
serial_test    = { version = "2.0" }
tempfile       = { version = "3.8" }

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
# Supported target are all user-land Linux platforms.
#
# Building on musl-based systems requires:
# ```
# env RUSTFLAGS=-Ctarget-feature=-crt-static cargo test
# ```
targets = [
  "aarch64-linux-android",
  "aarch64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu_ilp32",
  "aarch64-unknown-linux-musl",
  "aarch64_be-unknown-linux-gnu",
  "aarch64_be-unknown-linux-gnu_ilp32",
  "arm-linux-androideabi",
  "arm-unknown-linux-gnueabi",
  "arm-unknown-linux-gnueabihf",
  "arm-unknown-linux-musleabi",
  "arm-unknown-linux-musleabihf",
  "armv4t-unknown-linux-gnueabi",
  "armv5te-unknown-linux-gnueabi",
  "armv5te-unknown-linux-musleabi",
  "armv5te-unknown-linux-uclibceabi",
  "armv7-linux-androideabi",
  "armv7-unknown-linux-gnueabi",
  "armv7-unknown-linux-gnueabihf",
  "armv7-unknown-linux-musleabi",
  "armv7-unknown-linux-musleabihf",
  "hexagon-unknown-linux-musl",
  "i586-unknown-linux-gnu",
  "i586-unknown-linux-musl",
  "i686-linux-android",
  "i686-unknown-linux-gnu",
  "i686-unknown-linux-musl",
  "mips-unknown-linux-gnu",
  "mips-unknown-linux-musl",
  "mips-unknown-linux-uclibc",
  "mips64-unknown-linux-gnuabi64",
  "mips64-unknown-linux-muslabi64",
  "mips64el-unknown-linux-gnuabi64",
  "mips64el-unknown-linux-muslabi64",
  "mipsel-unknown-linux-gnu",
  "mipsel-unknown-linux-musl",
  "mipsel-unknown-linux-uclibc",
  "mipsisa32r6-unknown-linux-gnu",
  "mipsisa32r6el-unknown-linux-gnu",
  "mipsisa64r6-unknown-linux-gnuabi64",
  "mipsisa64r6el-unknown-linux-gnuabi64",
  "powerpc-unknown-linux-gnu",
  "powerpc-unknown-linux-gnuspe",
  "powerpc-unknown-linux-musl",
  "powerpc64-unknown-linux-gnu",
  "powerpc64-unknown-linux-musl",
  "powerpc64le-unknown-linux-gnu",
  "powerpc64le-unknown-linux-musl",
  "riscv32gc-unknown-linux-gnu",
  "riscv64gc-unknown-linux-gnu",
  "s390x-unknown-linux-gnu",
  "sparc-unknown-linux-gnu",
  "sparc64-unknown-linux-gnu",
  "thumbv7neon-linux-androideabi",
  "thumbv7neon-unknown-linux-gnueabihf",
  "thumbv7neon-unknown-linux-musleabihf",
  "x86_64-linux-android",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-gnux32",
  "x86_64-unknown-linux-musl",
]
